--- a/Django/CSUProjects/templates/cinema.html
+++ b/Django/CSUProjects/templates/cinema.html
@@ -127,15 +127,15 @@
             <div id="workersCarousel" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
                     <div class="carousel-item active d-flex">
-                        <img src="https://toruskit.com/assets/img/util/slider-magenta-01.svg" class="img-fluid w-100 rounded-5 user-select-none" alt="">
+                        <img src={% static "/img/slide-background.png" %} class="img-fluid w-100 rounded-5 user-select-none" alt="">
                         <div class="carousel-caption d-flex flex-column justify-content-center h-100">
-                            <h4 class="py-5">{{project.title}}</h4>
-                            <h5 class="pt-5">{{project.description}}</h5>
+                            <h2 class="py-5 text-light">{{project.title}}</h2>
+                            <h4 class="pt-5 text-light">{{project.description}}</h4>
                         </div>
                     </div>
                     {% for card in cards %}
                     <div class="carousel-item d-flex">
-                        <img src="https://toruskit.com/assets/img/util/slider-violet-01.svg" class="img-fluid w-100 rounded-5 user-select-none" alt="">
+                        <img src={% static "/img/slide-background.png" %} class="img-fluid w-100 rounded-5 user-select-none" alt="">
                         <div class="carousel-caption d-flex flex-column justify-content-center h-100">
                             <div class="card shadow-lg rounded-4 border-2">
                                 <div class="row">
@@ -146,11 +146,11 @@
                                         <img class="d-flex rounded-start-4 img-fluid h-100 w-100 start-0"src={% static "/img/worker-photo.jpg" %}>
                                     {% endif %}
                                     </div>
-                                    <div class="col-8">
-                                        <div class="card-body">
-                                            <h4>{{card.post}}</h4>
-                                            <h5>{{card.wid.name}}</h5>
-                                            <p>{{card.description}}</p>
+                                    <div class="col-8 ps-0">
+                                        <div class="card-body px-0">
+                                            <h1 class="pt-3 pb-4 border-bottom border-2">{{card.post}}</h1>
+                                            <h3 class="pt-2 pb-3 text-start">{{card.wid.name}}</h3>
+                                            <div class="fs-4 fst-normal text-start">{{card.description}}</div>
                                         </div>
                                     </div>
                                 </div>
