--- a/Django/CSUProjects/templates/completedProjects.html
+++ b/Django/CSUProjects/templates/completedProjects.html
@@ -174,8 +174,8 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">{{card.pid__title}}</h5>
-                                    <p class="card-text">{{card.pid__description}}</p>
+                                    <h5 class="card-title text-center">{{card.pid__title}}</h5>
+                                    <p class="card-text text-truncate">{{card.pid__description}}</p>
                                     <a href="cinema/{{card.pid}}" class="stretched-link"></a>
                                 </div>
                             </div>
@@ -194,16 +194,20 @@
                 <div class="col-3">
                     <h6>Контакты</h6>
                     <ul>
-                        <li>Телефон: +7(000)-000-00-00</li>
-                        <li>Адрес: Ул.Пушкина, д. Колотушкина</li>
+                        <li>Телефон: 8(351)799-71-01</li>
+                        <li>Адрес: г. Челябинск, ул. Братьев Кашириных, д. 129</li>
                         <li>Почта: user@example.com</li>
                     </ul>
                 </div>
                 <div class="col-3">
                     <h6>Продукты</h6>
                     <ul>
-                        <li>Наш университет</li>
-                        <li>Сайт цифровой школы</li>
+                        <li>
+                            <a href="https://www.csu.ru/" class="nav-link">Официальный сайт</a>
+                        </li>
+                        <li>
+                            <a href="https://moodle.uio.csu.ru/" class="nav-link">Moodle университета</a>
+                        </li>
                     </ul>
                 </div>
             </div>
