--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -280,7 +280,7 @@
                                         {% endif %}
                                     </span>
                                     <h5 class="card-title text-center">{{card.title}}</h5>
-                                    <p class="card-text text-truncate">{{card.description}}</p>
+                                    <p class="card-text">{{card.description|truncatechars:140}}</p>
                                     <a href="subProjects/{{card.pid}}" class="stretched-link"></a>
                                 </div>
                             </div>
@@ -427,7 +427,7 @@
                     </div>
                 </div>
                 <div class="modal-footer justify-content-center border-0">
-                    <button type="submit" class="btn btn-outline-dark rounded-3 col">Отправить</button>
+                    <button type="submit" class="btn btn-outline-dark rounded-3 col modalBtn">Отправить</button>
                 </div>
             </form>
         </div>
