--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -132,14 +132,49 @@
         <h1 class="fs-1 p-2">Подпроекты</h1>
         <div class="container">
             <div class="grid mt-5 mb-5">
-                <div class="row gy-3 gx-0 justify-content-between">
+                <div class="row gy-4 gx-0 justify-content-between align-items-center">
                 {% for card in cards%}
-                    <div class="card shadow-lg rounded-4 border-2" id="{{card.sid}}" style="max-width: 540px;">
-                        <div class="d-flex text-center">
-                            <div class="card-body">
-                                <h5 class="card-title">{{card.title}}</h5>
-                                <p class="card-text">{{card.description}}</p>
-                                <button type="button" class="btn btn-sm btn-outline-dark rounded-3 lastBtn" data-bs-toggle="modal" data-bs-target="#invite-prj">Записаться</button>
+                    <div class="card shadow-lg rounded-4 border-2"
+                         id="{{card.sid}}"
+                         style="max-width: 540px;">
+                        <div class="d-flex text-center align-items-center">
+                            <div class="card-body px-0">
+                                <h5 class="card-title pb-3 border-bottom border-2">{{card.title}}</h5>
+                                <div class="card-text collapse multiCollapse{{card.sid}}" id="collapse{{card.sid}} description{{card.sid}}">
+                                    <table class="table table-striped table-borderless w-100">
+                                        <thead class="align-middle">
+                                            <th>Требования к студенту</th>
+                                            <th>Требуемые напрвления обучения</th>
+                                        </thead>
+                                        <tbody class="align-middle">
+                                            {% for vacancy in vacancies %}
+                                                {% if vacancy.sid == card.sid %}
+                                                    <tr>
+                                                        <td>{{vacancy.description}}</th>
+                                                        <td>{{vacancy.post}}</td>
+                                                    </tr>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <p class="card-text px-4 collapse show multiCollapse{{card.sid}}" id="description{{card.sid}}">{{card.description}}</p>
+                                <div class="d-flex pt-3 pe-2 border-top border-1 justify-content-around">
+                                    <button class="btn btn-sm btn-outline-dark rounded-3 lastBtn"
+                                        type="button"
+                                        data-bs-toggle="collapse"
+                                        data-bs-target=".multiCollapse{{card.sid}}"
+                                        aria-expanded="false"
+                                        aria-controls="collapse{{card.sid}}">
+                                    Доступные вакансии
+                                    </button>
+                                    <button type="button"
+                                            class="btn btn-sm btn-outline-dark rounded-3 lastBtn"
+                                            data-bs-toggle="modal"
+                                            data-bs-target="#invite-prj">
+                                            Записаться
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -223,7 +258,7 @@
                         </div>
                     </div>
                     <div class="modal-footer justify-content-center border-0">
-                        <button type="submit" class="btn btn-outline-dark rounded-3 col">Записаться</button>
+                        <button type="submit" class="btn btn-outline-dark rounded-3 col modalBtn">Записаться</button>
                     </div>
                 </form>
             </div>
