--- a/Django/CSUProjects/templates/completedProjects.html
+++ b/Django/CSUProjects/templates/completedProjects.html
@@ -90,11 +90,11 @@
 {% endblock cssAndScripts %}
 
 {% block content %}
-    <nav class="navbar navbar-expand-sm position-fixed-top shadow-lg border-bottom nav-underline user-select-none">
-        <div class="container-fluid ">
-            <h2 class="logo d-flex justify-content-center"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
+    <nav class="navbar navbar-expand position-fixed-top shadow-lg border-bottom nav-underline user-select-none">
+        <div class="container-fluid">
+            <h2 class="logo d-sm-flex d-none justify-content-center"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
         </div>
-        <div class="collapse navbar-collapse justify-content-end col-8" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-md-end col-md-8 col-10" id="navbarNav">
             <ul class="navbar-nav text-center align-items-center">
                 <li class="nav-item">
                     <a class="nav-link" href={% url 'main' %}>Главная</a>
@@ -137,21 +137,22 @@
         <h1 class="fs-1 p-2">Проекты</h1>
         <div class="container">
             <div class="grid mt-4 mb-4">
-                <div class="row gy-3 gx-0 justify-content-between">
-                {% for card in cards%}
-                     <div class="card shadow-lg col-6 rounded-4 border-2" style="max-width: 540px;">
+                <div class="row gy-5 gx-0 justify-content-between">
+                    {% for card in cards%}
+                    <div class="card shadow-lg col-sm-6 rounded-4 border-2" style=" max-height: 240px;">
                         <div class="row">
-                            <div class="col-md-4">
-                                {% if card.pid.mediaExists %}
-                                    <img class="rounded-start" style="width: 160px; height: 240px;" src= {{card.photo.url}}>
+                            <div class="col-4">
+                                {% if card.mediaExists %}
+                                    <img class="rounded-start-4 img-fluid h-100" style="max-height: 236px;" src= {{card.photo.url}}>
                                 {% else %}
-                                    <img class="rounded-start-4" style="width: 160px; height: 236px;" src={% static "/img/logo-photo.jpg" %}>
+                                    <img class="rounded-start-4 img-fluid h-100" style="max-height: 236px;" src={% static "/img/logo-photo.jpg" %}>
                                 {% endif %}
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-8">
                                 <div class="card-body">
                                     <h5 class="card-title text-center">{{card.pid__title}}</h5>
-                                    <p class="card-text">{{card.pid__description|truncatechars:140}}</p>
+                                    <p class="card-text d-lg-block d-none"">{{card.pid__description|truncatechars:140}}</p>
+                                    <p class="card-text d-lg-none d-block"">{{card.pid__description|truncatechars:60}}</p>
                                     <a href="cinema/{{card.pid}}" class="stretched-link"></a>
                                 </div>
                             </div>
@@ -167,7 +168,7 @@
         <div class="container-fluid mt-4 sticky-bottom bg-body-secondary border-top border-3">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
-                <div class="col-3">
+                <div class="col-lg-3 col-6">
                     <h6>Контакты</h6>
                     <ul>
                         <li>Телефон: 8(351)799-71-01</li>
@@ -175,7 +176,7 @@
                         <li>Почта: user@example.com</li>
                     </ul>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3 col-4">
                     <h6>Продукты</h6>
                     <ul>
                         <li>
