--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -95,11 +95,11 @@
 
 {% block content %}
     
-    <nav class="navbar navbar-expand-sm position-fixed-top shadow-lg border-bottom nav-underline user-select-none">
-        <div class="container-fluid ">
-            <h2 class="logo d-flex justify-content-center"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
+    <nav class="navbar navbar-expand position-fixed-top shadow-lg border-bottom nav-underline user-select-none">
+        <div class="container-fluid">
+            <h2 class="logo d-sm-flex d-none justify-content-center"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
         </div>
-        <div class="collapse navbar-collapse justify-content-end col-8" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-md-end col-md-8 col-10" id="navbarNav">
             <ul class="navbar-nav text-center align-items-center">
                 <li class="nav-item">
                     <a class="nav-link" href={% url 'main' %}>Главная</a>
@@ -132,7 +132,7 @@
         <h1 class="fs-1 p-2">Подпроекты</h1>
         <div class="container">
             <div class="grid mt-5 mb-5">
-                <div class="row gy-4 gx-0 justify-content-between align-items-center">
+                <div class="row gy-4 gx-0 justify-content-lg-between justify-content-center align-items-center">
                 {% for card in cards%}
                     <div class="card shadow-lg rounded-4 border-2"
                          id="{{card.sid}}"
@@ -188,7 +188,7 @@
         <div class="container-fluid mt-4 sticky-bottom bg-body-secondary border-top border-3">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
-                <div class="col-3">
+                <div class="col-lg-3 col-6">
                     <h6>Контакты</h6>
                     <ul>
                         <li>Телефон: 8(351)799-71-01</li>
@@ -196,7 +196,7 @@
                         <li>Почта: user@example.com</li>
                     </ul>
                 </div>
-                <div class="col-3">
+                <div class="col-lg-3 col-4">
                     <h6>Продукты</h6>
                     <ul>
                         <li>
